[tool.poetry]
name = "play-starlette"
version = "0.1.0"
description = ""
authors = ["senyan <senyan@qq.com>"]

[tool.poetry.dependencies]
python = "^3.8"
starlette = {extras = ["full"], version = "^0.14.2"}
uvicorn = "^0.13.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
